--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseurl = "https://username.github.io"
+baseurl = "/"
 DefaultContentLanguage = "en"
 title = "STREET SIDE"
 # Using theme as git submodule 
